ROOMS-374: Replace fieldsets with div wrappers.

--- a/css/rooms_availability_constraints_range.css
+++ b/css/rooms_availability_constraints_range.css
@@ -1,4 +1,17 @@
+.group--conditions{
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+.group--limits {
+  float: right;
+  margin-bottom: 10px;
+}
 .field-widget-rooms-availability-constraints-range .rooms-availability-range--remove-button {
   clear: both;
   float: right;
+}
+
+.field-widget-rooms-availability-constraints-range .container-inline {
+  clear: both;
 }
