CS-72: Fix ajax-progress position

--- a/css/rooms_availability_constraints_range.css
+++ b/css/rooms_availability_constraints_range.css
@@ -15,3 +15,8 @@
 .field-widget-rooms-availability-constraints-range .container-inline {
   clear: both;
 }
+
+.field-widget-rooms-availability-constraints-range .ajax-progress {
+	float: right;
+	margin: 5px 10px 0 0;
+}
