CS-84: Fix button's names

--- a/css/rooms_availability_constraints_range.css
+++ b/css/rooms_availability_constraints_range.css
@@ -8,7 +8,7 @@
   float: right;
 }
 
-.field-widget-rooms-availability-constraints-range input[name="add_min_max"] {
+.field-widget-rooms-availability-constraints-range input[name^="add_min_max"] {
   display: block !important;
 }
 
